@@ -415,7 +415,6 @@ class Turba_Application extends Horde_Registry_Application
     {
         /* We need a clean copy of the $cfgSources array here.*/
         $cfgSources = Turba::availableSources();
-
         foreach ($cfgSources as $source) {
             if (empty($source['use_shares'])) {
                 // Shares not enabled for this source
@@ -423,11 +422,12 @@ class Turba_Application extends Horde_Registry_Application
                     $driver = $GLOBALS['injector']->getInstance('Turba_Factory_Driver')->create($source);
                 } catch (Turba_Exception $e) {
                     Horde::logMessage($e, 'ERR');
-                    throw new Turba_Exception(sprintf(_("There was an error removing an address book for %s"), $user));
                 }
 
                 try {
                     $driver->removeUserData($user);
+                } catch (Turba_Exception_NotSupported $e) {
+                    continue;
                 } catch (Turba_Exception $e) {
                     Horde::logMessage($e, 'ERR');
                     throw new Turba_Exception(sprintf(_("There was an error removing an address book for %s"), $user));
@@ -460,6 +460,8 @@ class Turba_Application extends Horde_Registry_Application
 
                 try {
                     $driver->removeUserData($user);
+                } catch (Turba_Exception_NotSupported $e) {
+                    continue;
                 } catch (Turba_Exception $e) {
                     Horde::logMessage($e, 'ERR');
                     throw new Turba_Exception(sprintf(_("There was an error removing an address book for %s"), $user));
