@@ -1,0 +1,6 @@
+<?php
+/**
+ */
+class Turba_Exception_NotSupported extends Turba_Exception
+{
+}
