@@ -2,6 +2,7 @@
 v3.0.9-git
 ----------
 
+[mjr] Improve handling of removeUserData.
 [mjr] Honor auto_create configuration setting (Bug #10452,
       qoole.horde@lillimoth.com)
 [jan] Don't allow to search binary fields.
